--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
-        .header h1 {
-            font-weight: normal;
-            font-family: "Bodoni MT", Didot, "Didot LT STD", "Book Antiqua", Garamond, "Times New Roman", serif;
-        }
         .header {
             margin: .5em;
             border-bottom: 1px solid black;
+        }
+        .header h1 {
+            font-weight: normal;
+            font-family: "Bodoni MT", Didot, "Didot LT STD", "Book Antiqua", Garamond, "Times New Roman", serif;
         }
         .brand {
             display: inline-block;
@@ -83,7 +83,7 @@
 
     <!-- Critical markup -->
     <header class="header">
-        <a class="logo logo--loading"><img alt="" src="/logo.png" width="256px" height="256px"/></a>
+        <a class="logo logo--loading"><img alt="" src="logo.png" width="256px" height="256px"/></a>
         <h1 class="brand">
             Micado
         </h1>
@@ -100,26 +100,27 @@
     <footer></footer>    
     
     <!-- Dependencies -->
+    <script src="https://cdn.jsdelivr.net/loadcss/0.1.7/loadCSS.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="http://underscorejs.org/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
     <script src="https://cdn.jsdelivr.net/backbone.marionette/2.4.3/backbone.marionette.min.js"></script>
-    <script src="https://raw.githubusercontent.com/jeromegn/Backbone.localStorage/master/backbone.localStorage-min.js"></script>
-    <script src="/js/models/item.js"></script>
-    <script src="/js/collections/entities.js"></script>
-    <script src="/js/collections/items.js"></script>
-    <script src="/js/collections/cart.js"></script>
-    <script src="/js/views/header.js"></script>
-    <script src="/js/views/itemCard.js"></script>
-    <script src="/js/views/layout.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="https://cdn.rawgit.com/jeromegn/Backbone.localStorage/master/backbone.localStorage-min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/models/item.js"></script>
+    <script src="js/collections/entities.js"></script>
+    <script src="js/collections/items.js"></script>
+    <script src="js/collections/cart.js"></script>
+    <script src="js/views/header.js"></script>
+    <script src="js/views/itemCard.js"></script>
+    <script src="js/views/layout.js"></script>
 
     <!-- Initialisation -->
     <script type="application/javascript">
         Micado.run(
             {
-                itemsUrl    : '/items.json'
-                templatesUrl: '/templates.html'
+                itemsUrl    : 'items.json',
+                templatesUrl: 'templates.html'
             }
         );
     </script>
