Move basic contents styling back to critical inline set

--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
         .cart--empty .cart__counter {
             display: none;
         }
+        .content {
+            margin-top: 4em;
+            padding: 1em;
+            text-align: center;
+        }
+        .content h1 {
+            font-size: 1.5em;
+        }
+        .content p {
+            margin: .5em;
+        }
     </style>
     <link rel="preload" href="main.css" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="main.css"></noscript>
