Simplifies item-related views setup

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <!-- Critical templates -->
     <script type="text/template" id="error-template">
         <h1>Something&apos;s wrong</h1>
-        <p>Perhaps review your connection settings and try again</p>
+        <p>Perhaps review your connection settings and try again?</p>
     </script>
 
     <!-- Initialisation -->
