--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <!-- Critical markup -->
     <header class="header">
-        <a class="logo logo--loading" href="/" title="Homepage">
+        <a class="logo logo--loading" href="/micado" title="Homepage">
             <img alt="" src="logo.png" width="256px" height="256px"/>
         </a>
         <h1 class="brand">
