Fixes various bugs, improves styling and implements generalised offer indication. Fixes misunderstood pricing policies

--- a/templates.html
+++ b/templates.html
@@ -14,8 +14,7 @@
     <h1>Cart</h1>
     <p class="total">
         Total: 
-        <span class="total__currency"><%- Micado.Currency %></span>
-        <span class="total__figure"><%- total %></span>
+        <span class="total__currency"><%- Micado.Currency %></span><span class="total__figure"><%- total %></span>
     </p>
     <ul class="list"></ul>
 </script>
