--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
             color: black;
         }
         .header {
-            position: absolute;
+            position: fixed;
             top: 0;
             padding: .5em;
             width: 100%;
-            border-bottom: 1px solid black;
+            border-bottom: 2px solid black;
+            background: white;
         }
         .header h1 {
             font-family: "Bodoni MT", Didot, "Didot LT STD", "Book Antiqua", Garamond, "Times New Roman", serif;
