Avoids products overlapping header, fixes security error (protocol) and prevents scrolling up after clicking add

--- a/templates.html
+++ b/templates.html
@@ -10,7 +10,7 @@
         <%= discountPromo(discountCode) %>
         <span class="item__name"><%- name %></span>
         <span class="item__price"><%- Micado.Currency %><%- price %></span>
-        <a class="item__action" href="#"><%- actionName %></a>
+        <a class="item__action" href="javascript:void(0)"><%- actionName %></a>
     </li>
 </script>
 <script type="text/template" id="items-template">
