--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         .header {
             position: fixed;
             top: 0;
+            z-index: 100;
             padding: .5em;
             width: 100%;
             border-bottom: 2px solid black;
@@ -127,7 +128,7 @@
     <!-- Dependencies -->
     <script src="https://cdn.jsdelivr.net/loadcss/0.1.7/loadCSS.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="http://underscorejs.org/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
     <script src="https://cdn.jsdelivr.net/backbone.marionette/2.4.3/backbone.marionette.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromegn/Backbone.localStorage/master/backbone.localStorage-min.js"></script>
