--- a/templates.html
+++ b/templates.html
@@ -5,12 +5,13 @@
     <p class="item__offer reduced3">Buy 3 or more and pay <%- Micado.Currency %><%- discountPrice %> for each</p>
 </script>
 <script type="text/template" id="item-card-template">
-    <li class="item <%- addedClass() %>">
+    <li class="item <% if (inCart()) { %> item--added <% } %>">
+        <h2 class="item__name"><%- name %></h2>
         <img class="item__image" alt="<%- name %>" src="<%- image %>" />
         <%= discountPromo(discountCode) %>
-        <span class="item__name"><%- name %></span>
         <span class="item__price"><%- Micado.Currency %><%- price %></span>
         <a class="item__action" href="javascript:void(0)"><%- actionName %></a>
+        <span class="item__cart"><%- inCart() %> added</span> 
     </li>
 </script>
 <script type="text/template" id="items-template">
