--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         }
         .content h1 {
             font-size: 1.5em;
+            font-weight: bold;
         }
         .content p {
             margin: .5em;
