--- a/templates.html
+++ b/templates.html
@@ -9,7 +9,7 @@
         <h2 class="item__name"><%- name %></h2>
         <img class="item__image" alt="<%- name %>" src="<%- image %>" />
         <%= !isCartItem() && discountPromo(discountCode) %>
-        <span class="item__price">Price: <%- price() %></span>
+        <span class="item__price">Price: <%- humanPrice() %></span>
         <a class="item__action" href="javascript:void(0)"><%- actionName %></a>
         <span class="item__cart">
             <span class="item__cart__number"><%- !isCartItem() && inCart() %></span> 
