--- a/templates.html
+++ b/templates.html
@@ -11,10 +11,7 @@
         <% if (!isCartItem()) { %>
             <%= discountPromo(discountCode) %>
         <% } %>
-        <span class="item__price">
-            Price: 
-            <span class="item__price__value"><%- humanPrice() %></span>
-        </span>
+        <span class="item__price"><%- humanPrice() %></span>
         <a class="item__action" href="javascript:void(0)"><%- actionName %></a>
         <span class="item__cart">
             <span class="item__cart__number"><%- !isCartItem() && inCart() %></span> 
