--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         .header {
             position: fixed;
             top: 0;
+            left: 0;
+            right: 0;
             z-index: 100;
             padding: .5em;
-            width: 100%;
             border-bottom: 1px solid black;
             background: white;
         }
@@ -79,13 +80,16 @@
             }
         }
         .nav {
-            float: right;
+            position: absolute;
+            right: 0;
+            top: 0;
+            padding: .3em;
         }
         .nav__button {
             display: inline-block;
-            line-height: 5em;
-            width: 5em;
-            height: 5em;
+            line-height: 3em;
+            width: 3em;
+            height: 3em;
             text-align: center;
             border: 2px solid black;
             -webkit-border-radius: 50%;
@@ -98,7 +102,10 @@
             background: black;
         }
         .nav__cart--empty .nav__cart__counter {
-            display: none;
+            visibility: none;
+        }
+        .nav__cart--empty .nav__cart_counter:before {
+            content: 'cart';
         }
         .content {
             margin-top: 4em;
@@ -130,9 +137,9 @@
             Micado
         </h1>
         <nav class="nav">
-            <a title="shop" class="nav__button nav__items" href="#items">shop</a>
+            <a title="shop" class="nav__button nav__items nav__button--active" href="#items">shop</a>
             <a title="cart" class="nav__button nav__cart nav__cart--empty" href="#cart">
-                <span class="nav__cart__counter"></span>
+                <span class="nav__cart__counter">0</span>
             </a>
         </nav>
     </header>
