--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <nav class="nav">
             <a title="shop" class="nav__button nav__items nav__button--active" href="#items">shop</a>
             <a title="cart" class="nav__button nav__cart nav__cart--empty" href="#cart">
-                <span class="nav__cart__counter">0</span>
+                <span class="nav__cart__counter">cart</span>
             </a>
         </nav>
     </header>
