--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             Micado
         </h1>
         <nav class="nav">
-            <a title="shop" class="nav__button nav__items nav__button--active" href="#items">shop</a>
+            <a title="shop" class="nav__button nav__items" href="#items">shop</a>
             <a title="cart" class="nav__button nav__cart" href="#cart">cart</a>
             <span class="nav__cart__counter nav__cart__counter--empty">0</span>
         </nav>
