Updates app status on hash change

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
             Micado
         </h1>
         <nav class="nav">
-            <a title="shop" class="nav__button nav__items" href="#items">shop</a>
-            <a title="cart" class="nav__button nav__cart" href="#cart">cart</a>
+            <a title="shop" class="nav__button" href="#items">shop</a>
+            <a title="cart" class="nav__button" href="#cart">cart</a>
             <span class="nav__cart__counter nav__cart__counter--empty">0</span>
         </nav>
     </header>
