Segregates styling for items depending on list type

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Micado | Ocado but better</title>
     <style>
-        html, body, header, main, footer, h1, p {
+        html, body, header, main, footer, h1, h2, p {
             margin: 0;
             padding: 0;
         }
-        h1 {
+        h1, h2 {
             font-weight: normal;
         }
         body {
