Prevent jerk when rendering nav

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             color: white;
             background: black;
         }
+        .nav__cart__counter {
+            position: absolute;
+        }
         .nav__cart__counter--empty {
             opacity: 0;
         }
