Makes offer text responsive-friendly

--- a/templates.html
+++ b/templates.html
@@ -2,7 +2,7 @@
     <p class="item__offer">Buy one, get one free</p>
 </script>
 <script type="text/template" id="reduced3-template">
-    <p class="item__offer">Buy 3 or more and pay <%- Micado.Currency %><%- discountPrice %> for each</p>
+    <p class="item__offer">Buy 3+ and pay <%- Micado.Currency %><%- discountPrice %> for each</p>
 </script>
 <script type="text/template" id="item-card-template">
     <li class="item <% if (!isCartItem() && inCart()) { %> item--added <% } %>">
