Make transitions more responsive

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             -moz-border-radius: 50%;
             border-radius: 50%;
             cursor: pointer;
-            transition: background-color 1s;
+            transition: background-color 500ms;
         }
         .nav__button--active {
             color: white;
