Adds a button for emptying the cart's contents

--- a/templates.html
+++ b/templates.html
@@ -33,4 +33,5 @@
         --><span class="total__figure"><%- total %></span>
     </p>
     <ul class="list cart"></ul>
+    <a class="item__action empty" href="javascript:void(0)">Empty cart</a>
 </script>
