Adds link to github

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
         .content p {
             margin: .5em;
         }
+        footer {
+            margin: 1em;
+            text-align: center;
+        }
     </style>
     <link rel="preload" href="main.css" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="main.css"></noscript>
@@ -150,7 +154,9 @@
     <main class="content">
         <h1>Loading...</h1>
     </main>
-    <footer></footer>    
+    <footer>
+        <a target="_blank" href="https://github.com/hqcasanova/micado" title="GitHub">Source at GitHub</a>
+    </footer>    
     
     <!-- Dependencies -->
     <script src="https://cdn.jsdelivr.net/loadcss/0.1.7/loadCSS.min.js"></script>
