LoadCSS version available on CDN is too old and causes issues on Safari/Firefox. Inlines the code

--- a/index.html
+++ b/index.html
@@ -158,13 +158,20 @@
         <a target="_blank" href="https://github.com/hqcasanova/micado" title="GitHub">Source at GitHub</a>
     </footer>    
     
-    <!-- Dependencies -->
-    <script src="https://cdn.jsdelivr.net/loadcss/0.1.7/loadCSS.min.js"></script>
+    <!-- Loads non-critical CSS using Filamentgroup's loadCSS -->
+    <script>
+        !function(e){"use strict";var n=function(n,t,o){function i(e){return a.body?e():void setTimeout(function(){i(e)})}function r(){l.addEventListener&&l.removeEventListener("load",r),l.media=o||"all"}var d,a=e.document,l=a.createElement("link");if(t)d=t;else{var s=(a.body||a.getElementsByTagName("head")[0]).childNodes;d=s[s.length-1]}var f=a.styleSheets;l.rel="stylesheet",l.href=n,l.media="only x",i(function(){d.parentNode.insertBefore(l,t?d:d.nextSibling)});var u=function(e){for(var n=l.href,t=f.length;t--;)if(f[t].href===n)return e();setTimeout(function(){u(e)})};return l.addEventListener&&l.addEventListener("load",r),l.onloadcssdefined=u,u(r),l};"undefined"!=typeof exports?exports.loadCSS=n:e.loadCSS=n}("undefined"!=typeof global?global:this);
+        !function(t){if(t.loadCSS){var e=loadCSS.relpreload={};if(e.support=function(){try{return t.document.createElement("link").relList.supports("preload")}catch(e){return!1}},e.poly=function(){for(var e=t.document.getElementsByTagName("link"),n=0;n<e.length;n++){var r=e[n];"preload"===r.rel&&"style"===r.getAttribute("as")&&(t.loadCSS(r.href,r),r.rel=null)}},!e.support()){e.poly();var n=t.setInterval(e.poly,300);t.addEventListener&&t.addEventListener("load",function(){t.clearInterval(n)}),t.attachEvent&&t.attachEvent("onload",function(){t.clearInterval(n)})}}}(this);
+    </script>
+
+    <!-- Backbone/Marionette dependencies -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
     <script src="https://cdn.jsdelivr.net/backbone.marionette/2.4.3/backbone.marionette.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromegn/Backbone.localStorage/master/backbone.localStorage-min.js"></script>
+
+    <!-- Application -->
     <script src="js/app.js"></script>
     <script src="js/models/item.js"></script>
     <script src="js/collections/entities.js"></script>
