--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
     <script src="https://cdn.jsdelivr.net/backbone.marionette/2.4.3/backbone.marionette.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromegn/Backbone.localStorage/master/backbone.localStorage-min.js"></script>
+    <script src="https://cdn.jsdelivr.net/backbone.localstorage/1.1.16/backbone.localStorage-min.js"></script>
 
     <!-- Application -->
     <script src="js/app.js"></script>
